<resources>
    <string name="app_name">GloboFly</string>
    <string name="globofly">GloboFly</string>
    <string name="for_endless_vacations">...for endless vacations</string>
    <string name="get_started">Get Started</string>
    <string name="globofly_logo">GloboFly Logo</string>
    <string name="message">Black Friday! Get 50% cash back on saving your first spot.</string>
    <string name="destiny">Destiny</string>
    <string name="just_a_image">Just a Image</string>
    <string name="city_name">City Name</string>
    <string name="country_name">Country Name</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
</resources>
